force-app/main/default/objects/ACLCompensationClaim__c/ACLCompensationClaim__c.object-meta.xml
<CustomObject>
    <description>Holds ACL Compensation Claims information related to an Organisation, Contact and Billing Account.</description>
    <label>ACL Compensation Claim</label>
    <nameField>
        <displayFormat>ACL-{000000}</displayFormat>
        <label>ACL Compensation Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ACL Compensation Claims</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>