force-app/main/default/objects/ACLCompensationClaim__c/fields/ContentDescription__c.field-meta.xml
<CustomField>
    <fullName>ContentDescription__c</fullName>
    <description>What was the item posted.</description>
    <inlineHelpText>Description of contents of posted item.</inlineHelpText>
    <label>Content Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>