force-app/main/default/objects/ACLCompensationClaim__c/fields/DeclineReason__c.field-meta.xml
<CustomField>
    <fullName>DeclineReason__c</fullName>
    <description>Claim has been declined for various reasons.</description>
    <inlineHelpText>Claim has been assessed and then declined.</inlineHelpText>
    <label>Decline Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>