force-app/main/default/objects/ACLCompensationClaim__c/fields/PostageAmountGST__c.field-meta.xml
<CustomField>
    <fullName>PostageAmountGST__c</fullName>
    <description>GST Component included in Postage Amount &amp; Total Claim Amount.</description>
    <inlineHelpText>Inclusive GST of Postage Amount paid to Customer.</inlineHelpText>
    <label>Postage Amount GST</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>