force-app/main/default/objects/ACLCompensationClaim__c/fields/UniqueReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>UniqueReferenceNumber__c</fullName>
    <description>Individual reference number for a bulk claim contained in the Claimsview system</description>
    <inlineHelpText>Series of MER numbers to make an individual claim beginning with REFC.</inlineHelpText>
    <label>Unique Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>