force-app/main/default/objects/ACLCompensationClaim__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ReferenceNumber__c</columns>
    <columns>ClaimNumber__c</columns>
    <columns>UniqueReferenceNumber__c</columns>
    <columns>CompanyName__c</columns>
    <columns>ClaimStatus__c</columns>
    <columns>Status__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>